<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewExpression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text=""
        android:textSize="30sp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/_0"
        android:textSize="36sp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpression"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:rowCount="5"
        android:columnCount="4"
        android:orientation="horizontal">

        <!-- First row -->
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/c" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/Divide" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/Multiply" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/Subtract" />

        <!-- Second row -->
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/Add" />

        <!-- Third row -->
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_4" />


        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_6" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/Delete" />

        <!-- Fourth row -->
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_3" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"
            android:textSize="25sp"
            android:text="@string/Equals" />

        <!-- Fifth row -->
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:textSize="25sp"
            android:text="@string/_0" />

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="40sp"
            android:text="@string/Decimal" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>